--- a/index.html
+++ b/index.html
@@ -62,30 +62,21 @@
             {% for p in Products %}
             {% include "product.html" with product=p %}
             {% endfor %}
-            <div class="col-sm-4 col-lg-4 col-md-4">
-              <h4><a href="#">Like this template?</a></h4>
-              <p>If you like this template, then check out<a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">this tutorial</a> on how to build a working review system for your online store!</p><a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/" class="btn btn-primary">View Tutorial</a>
-            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- /.container-->
     <div class="container">
       <hr>
-      <!-- Footer-->
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright © Your Website 2014</p>
+            <p>Copyright © Your Website 2016</p>
           </div>
         </div>
       </footer>
     </div>
-    <!-- /.container-->
-    <!-- jQuery-->
-    <script src="js/jquery.js"></script>
-    <!-- Bootstrap Core JavaScript-->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-git1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </body>
 </html>
