--- a/index.html
+++ b/index.html
@@ -1,82 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>CCBSC Catalog</title>
-    <!-- Bootstrap Core CSS-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <!-- Custom CSS-->
-    <link href="css/shop-homepage.css" rel="stylesheet"><!--[lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
-  </head>
-  <body>
-    <!-- Navigation-->
-    <nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display-->
-        <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">Start Bootstrap</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling-->
-        <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse-->
-      </div>
-      <!-- /.container-->
-    </nav>
-    <!-- Page Content-->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <p class="lead">{{ Name }}</p>
-          <div class="list-group categories">{% for c in Categories %}<a href="#" data-id="{{c.id}}" class="category list-group-item">{{c.name}}</a>{%endfor%}</div>
-        </div>
-        <div class="col-md-9">
-          <div class="row carousel-holder">
-            <div class="col-md-12">
-              <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
-                <ol class="carousel-indicators">
-                  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="item active"><img src="http://placehold.it/800x300" alt="" class="slide-image"></div>
-                  <div class="item"><img src="http://placehold.it/800x300" alt="" class="slide-image"></div>
-                  <div class="item"><img src="http://placehold.it/800x300" alt="" class="slide-image"></div>
-                </div><a href="#carousel-example-generic" data-slide="prev" class="left carousel-control"><span class="glyphicon glyphicon-chevron-left"></span></a><a href="#carousel-example-generic" data-slide="next" class="right carousel-control"><span class="glyphicon glyphicon-chevron-right"></span></a>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            {% for p in Products %}
-            {% include "product.html" with product=p %}
-            {% endfor %}
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <hr>
-      <footer>
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Copyright © Your Website 2016</p>
-          </div>
-        </div>
-      </footer>
-    </div>
-    <script src="https://code.jquery.com/jquery-git1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><!--Created by jawaad on 17/07/2014.
+--><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="description" content=""><meta name="author" content=""><title>CCBSC Catalog</title><!-- Bootstrap Core CSS--><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><!-- Custom CSS-->
+<link href="/media/shop-css/shop-homepage.css" rel="stylesheet"><!--[lt IE 9]><script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script><script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]--></head><body><nav role="navigation" class="navbar navbar-default navbar-fixed-top coke"><div class="container-fluid"><!-- Brand and toggle get grouped for better mobile display--><div class="navbar-header"><button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle navbar-toggle-left collapsed"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><button type="button" class="navbar-toggle collapsed cart-redirect"><span class="sr-only">Shopping Cart</span><div class="cart-header"><span style="display: none;" class="badge total_cases hideable_total_cases">0</span><span>&nbsp;</span><i class="glyphicon glyphicon-shopping-cart"></i></div></button><div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse"><ul class="nav navbar-nav"><li class="active"><a href="#"><span class="japanese">キャタロッグ</span><span class="english hidden">Catalog</span></a></li><li><a href="viewlegal.html" class="legal1"><span class="english hidden">User Agreement</span><span class="japanese">利用規約</span></a></li></ul></div></div></div></nav><div class="container"><div class="row"><div class="col-md-3"><p class="lead">{{ Name }}</p><div class="list-group categories">{% for c in Categories %}<a href="#" data-id="{{c.id}}" class="category list-group-item">{{c.name}}</a>{%endfor%}</div></div><div class="col-md-9">{% if Banner_Ads %}{% include "shop/carousel.html" with banner_ads=Banner_Ads %}{%endif%}<div class="row">{% for p in Products %}
+{% include "shop/product.html" with product=p %}
+{% endfor %}</div></div></div></div><div class="container"><hr><footer><div class="row"><div class="col-lg-12"><p>Copyright © Your Website 2016</p></div></div></footer></div><script src="https://code.jquery.com/jquery-1.11.3.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script></body></html>
